# address-printer

./: .gitignore  main.py  pyproject.toml
app/: PDF_Generator.py  __init__.py  forms.py  printer.py  routes.py
app/static/: style.css
app/templates/: base.html  edit.html  step1.html  step2.html  step3.html  verify.html
